--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hello World, this is Jingyao & Tu Hu. This is our website. It is still under construction!</h1>
-    <h1> Welcome to contact us at \<a href="mailto:tu@jingyaohu.com?subject=feedback"></a>
+    <h1> Welcome to contact us at tu@jingyaohu.com
   </body>
 </html>
