--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World, this is Jingyao & Tu Hu. This is our website. It is still under construction!</h1>
-    <h1> Welcome to contact us at tu@jingyaohu.com
+    <h1>Hello World, this is Tu Hu. </h1>
   </body>
 </html>
